# SORCPP

./: CMakeLists.txt  README.md
include/: SOR.hpp
src/: SOR.cpp  main.cpp
